Configure rationalization and documentation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -195,8 +195,14 @@ src_libbitcoin_la_LIBADD = \
     -lboost_regex \
     -lboost_filesystem \
     -lpthread \
-    ${secp256k1_LIBS}
+    ${secp256k1_LIBS} \
+    ${gmp_LIBS}
     
+if USE_LIBRT
+src_libbitcoin_la_LIBADD += \
+    ${rt_LIBS}
+endif
+
 #
 # examples
 #
@@ -205,7 +211,8 @@ src_libbitcoin_la_LIBADD = \
 #
 # tests
 #
-if ENABLE_TESTS
+if WITH_TESTS
+
 TESTS = test/libbitcoin_test
 
 check_PROGRAMS = test/libbitcoin_test
@@ -241,12 +248,12 @@ test_libbitcoin_test_LDADD = \
     -lboost_system \
     -lboost_unit_test_framework \
     ${crypto_LIBS} \
-    ${secp256k1_LIBS}
+    ${secp256k1_LIBS} \
+    ${gmp_LIBS}
 
 if USE_LIBRT
 test_libbitcoin_test_LDADD += \
-    @rtlib@
-
+    ${rt_LIBS}
 endif
 
 endif
