--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -15,6 +15,5 @@ Requires: libsecp256k1 >= 0.0.1
 Cflags: -I${includedir} -std=c++11
 
 # Our own lib and any we require that do not publish package configuration.
-Libs: -L${libdir} -lbitcoin -lgmp -lboost_date_time -lboost_filesystem \
-    -lboost_regex -lboost_system -lboost_unit_test_framework @rtlib@
-
+Libs: -L${libdir} -lbitcoin @gmp_LIBS@ -lboost_date_time -lboost_filesystem \
+    -lboost_regex -lboost_system -lboost_unit_test_framework @rt_LIBS@
