--- a/builds/msvc/vs2013/test/libbitcoin_test.vcxproj.filters
+++ b/builds/msvc/vs2013/test/libbitcoin_test.vcxproj.filters
@@ -43,13 +43,13 @@
     <ClCompile Include="..\..\..\..\test\hd_keys.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\test\script_number.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\test\serialize.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\test\hash_number.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\test\script_number.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -78,6 +78,9 @@
       <Filter>include\script_json</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\test\big_number.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\test\script_number.hpp">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
