--- a/builds/msvc/vs2013/test/libbitcoin_test.props
+++ b/builds/msvc/vs2013/test/libbitcoin_test.props
@@ -11,6 +11,8 @@
 
   <ItemDefinitionGroup>
     <ClCompile>
+      <!-- Disable optimization to prevent excessive compilation time in release builds due to large data statements. -->
+      <Optimization>Disabled</Optimization>
       <DisableSpecificWarnings>%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <EnablePREfast>false</EnablePREfast>
       <PreprocessorDefinitions>_WIN32_WINNT=0x0600;%(PreprocessorDefinitions)</PreprocessorDefinitions>
