--- a/builds/msvc/vs2013/libbitcoin_test/libbitcoin_test.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin_test/libbitcoin_test.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="..\..\..\..\test\script_number.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\test\satoshi_words.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -60,27 +63,21 @@
     <Filter Include="include">
       <UniqueIdentifier>{5e0e641a-cd44-4412-822b-aa5da59dff51}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include\hash_data">
-      <UniqueIdentifier>{e8ff7175-d87b-4bd4-8ea9-8ba853008c26}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="include\script_json">
-      <UniqueIdentifier>{68ea129e-823c-49f5-9a78-933c3a53fac9}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\test\hash_data\vectors.hpp">
-      <Filter>include\hash_data</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\test\script_json\vectors.hpp">
-      <Filter>include\script_json</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\test\big_number.hpp">
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\test\script_number.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\test\hash.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\test\script.hpp">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
