Rename VS test project.

--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.props
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.props
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
-    <_PropertySheetDisplayName>Libbitcoin Examples Common Settings</_PropertySheetDisplayName>
+    <_PropertySheetDisplayName>Libbitcoin Test Common Settings</_PropertySheetDisplayName>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
