--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 
 compiler: gcc
-
+   
 before_install:
   # Set package repository.
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
@@ -14,12 +14,12 @@ before_install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50
   
 install:
-  # Get GMP (GNU Multiprecision Arithmetic Library)
-  - sudo apt-get -qq install libgmp-dev
+  # Get GNU Multiprecision Arithmetic Library (v5.0.2 on Travis).
+  # - sudo apt-get -qq install libgmp-dev
 
-  # Download and install boost components at the minimum version required.
-  - sudo ./install-boost.sh
+  # Get Boost (v1.46 on Travis, we require 1.49).
+  # - sudo apt-get -qq install libboost-dev
 
 script:
-  # Download and build unpackaged dependencies and build libbitcoin.
-  - sudo ./install-libbitcoin.sh CXXFLAGS="-Os -s"
+  # Download and build all dependencies and libbitcoin.
+  - sudo ./install-libbitcoin.sh CXXFLAGS="-Os -s" --disable-shared --enable-static --build-gmp --build-boost
