--- a/configure.ac
+++ b/configure.ac
@@ -83,6 +83,16 @@ AC_ARG_ENABLE([testnet],
 AC_MSG_RESULT($enable_testnet)
 AS_IF([test x$enable_testnet != xno], AC_DEFINE([ENABLE_TESTNET]))
 
+# Support --enable-shared option
+#------------------------------------------------------------------------------
+AC_MSG_CHECKING(--enable-shared option)
+AC_ARG_WITH([shared],
+    AS_HELP_STRING([--enable-shared], 
+        [Compile with shared libraries.]),
+    [enable_shared=$enableval],
+    [enable_shared=no])
+AC_MSG_RESULT($enable_shared)
+
 # Support --with-tests option
 #------------------------------------------------------------------------------
 AC_MSG_CHECKING(--with-tests option)
@@ -126,6 +136,8 @@ PKG_CHECK_MODULES([secp256k1], [libsecp256k1 >= 0.0.1])
 AS_IF([test x$with_tests != xno], [AX_BOOST_UNIT_TEST_FRAMEWORK])
 AM_CONDITIONAL([WITH_TESTS], [test x$with_tests != xno])
 AM_COND_IF([WITH_TESTS], [AC_MSG_NOTICE([WITH_TESTS defined])])
+AM_CONDITIONAL([SET_TEST_DYN_LINK], [test x$enable_shared != xno])
+AM_COND_IF([SET_TEST_DYN_LINK], [AC_MSG_NOTICE([SET_TEST_DYN_LINK defined])])
 
 # Require librt if on linux.
 #------------------------------------------------------------------------------
@@ -146,6 +158,15 @@ AX_CHECK_COMPILE_FLAG([-Wextra],
 
 AX_CHECK_COMPILE_FLAG([-Wno-missing-braces],
     [CXXFLAGS="$CXXFLAGS -Wno-missing-braces"])
+
+# This cleans up for boost headers.
+AX_CHECK_COMPILE_FLAG([-Wno-unused-local-typedefs],
+    [CXXFLAGS="$CXXFLAGS -Wno-unused-local-typedefs"])
+
+# Prevent clang from warning about unknown warnings (even though checked),
+# specifically -Wno-unused-local-typedefs.
+AX_CHECK_COMPILE_FLAG([-Wno-unknown-warning-option],
+    [CXXFLAGS="$CXXFLAGS -Wno-unknown-warning-option"])
 
 AX_CHECK_COMPILE_FLAG([-Wpedantic],
     [CXXFLAGS="$CXXFLAGS -Wpedantic"],
