--- a/configure.ac
+++ b/configure.ac
@@ -83,16 +83,6 @@ AC_ARG_ENABLE([testnet],
 AC_MSG_RESULT($enable_testnet)
 AS_IF([test x$enable_testnet != xno], AC_DEFINE([ENABLE_TESTNET]))
 
-# Support --enable-shared option
-#------------------------------------------------------------------------------
-AC_MSG_CHECKING(--enable-shared option)
-AC_ARG_WITH([shared],
-    AS_HELP_STRING([--enable-shared], 
-        [Compile with shared libraries.]),
-    [enable_shared=$enableval],
-    [enable_shared=no])
-AC_MSG_RESULT($enable_shared)
-
 # Support --with-tests option
 #------------------------------------------------------------------------------
 AC_MSG_CHECKING(--with-tests option)
@@ -136,8 +126,9 @@ PKG_CHECK_MODULES([secp256k1], [libsecp256k1 >= 0.0.1])
 AS_IF([test x$with_tests != xno], [AX_BOOST_UNIT_TEST_FRAMEWORK])
 AM_CONDITIONAL([WITH_TESTS], [test x$with_tests != xno])
 AM_COND_IF([WITH_TESTS], [AC_MSG_NOTICE([WITH_TESTS defined])])
-AM_CONDITIONAL([SET_TEST_DYN_LINK], [test x$enable_shared != xno])
-AM_COND_IF([SET_TEST_DYN_LINK], [AC_MSG_NOTICE([SET_TEST_DYN_LINK defined])])
+AM_CONDITIONAL([SET_BOOST_TEST_DYN_LINK], [test x$enable_shared != xno])
+AM_COND_IF([SET_BOOST_TEST_DYN_LINK],
+    [AC_MSG_NOTICE([BOOST_TEST_DYN_LINK defined])])
 
 # Require librt if on linux.
 #------------------------------------------------------------------------------
