--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -16,4 +16,4 @@ Cflags: -I${includedir} -std=c++11
 
 # Our own lib and any we require that do not publish package configuration.
 Libs: -L${libdir} -lbitcoin @gmp_LIBS@ -lboost_date_time -lboost_filesystem \
-    -lboost_regex -lboost_system -lboost_unit_test_framework @rt_LIBS@
+    -lboost_regex -lboost_system @rt_LIBS@
