Disable visiblity restrictions (temp).

--- a/configure.ac
+++ b/configure.ac
@@ -166,13 +166,13 @@ AX_CHECK_COMPILE_FLAG([-Wpedantic],
 
 # Set compiler flags.
 #------------------------------------------------------------------------------
-AX_CHECK_COMPILE_FLAG([-fvisibility-inlines-hidden],
-    [CXXFLAGS="$CXXFLAGS -fvisibility-inlines-hidden"])
+#AX_CHECK_COMPILE_FLAG([-fvisibility-inlines-hidden],
+#    [CXXFLAGS="$CXXFLAGS -fvisibility-inlines-hidden"])
 
-AX_CHECK_COMPILE_FLAG([-fvisibility=internal],
-    [CXXFLAGS="$CXXFLAGS -fvisibility=internal"],
-    AX_CHECK_COMPILE_FLAG([-fvisibility=hidden],
-        [CXXFLAGS="$CXXFLAGS -fvisibility=hidden"]))
+#AX_CHECK_COMPILE_FLAG([-fvisibility=internal],
+#    [CXXFLAGS="$CXXFLAGS -fvisibility=internal"],
+#    AX_CHECK_COMPILE_FLAG([-fvisibility=hidden],
+#        [CXXFLAGS="$CXXFLAGS -fvisibility=hidden"]))
 
 AX_CHECK_COMPILE_FLAG([-fstack-protector],
     [AX_CHECK_LINK_FLAG([-fstack-protector], 
