--- a/configure.ac
+++ b/configure.ac
@@ -43,25 +43,27 @@ AX_CXX_COMPILE_STDCXX_11([noext], [mandatory])
 # Enable silent rules option.
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
+# Check for pkg-config.
+PKG_PROG_PKG_CONFIG
+
 # Declare environment variables that affect the build.
 #------------------------------------------------------------------------------
 AC_ARG_VAR([CC], "C compiler to use, such as gcc or clang")
 AC_ARG_VAR([CXX], "C++ compiler to use, such as g++ or clang++")
 AC_ARG_VAR([PKG_CONFIG_PATH], "Additional directories for package discovery.")
 
-# Support --with-pkgconfigdir option (after verifying package config install).
+# Support --with-pkgconfigdir option (default to ${libdir}/pkgconfig).
 #------------------------------------------------------------------------------
-PKG_PROG_PKG_CONFIG
 AC_MSG_CHECKING(--with-pkgconfigdir option)
 AC_ARG_WITH([pkgconfigdir], 
     AS_HELP_STRING([--with-pkgconfigdir=PATH], 
         [Path to pkgconfig directory.]),
     [pkgconfigdir=$withval], 
     [pkgconfigdir=${libdir}/pkgconfig])
-AC_MSG_RESULT($pkgconfigdir)
+AC_MSG_RESULT([$pkgconfigdir])
 AC_SUBST([pkgconfigdir])
 
-# Support --enable-debug option
+# Support --enable-debug option (default to no).
 #------------------------------------------------------------------------------
 AC_MSG_CHECKING(--enable-debug option)
 AC_ARG_ENABLE([debug],
@@ -69,10 +71,10 @@ AC_ARG_ENABLE([debug],
         [Compile with debug assertions.]),
     [enable_debug=$enableval],
     [enable_debug=no])
-AC_MSG_RESULT($enable_debug)
+AC_MSG_RESULT([$enable_debug])
 AS_IF([test x$enable_debug != xno], AC_DEFINE([DEBUG]))
 
-# Support --enable-testnet option
+# Support --enable-testnet option (default to no).
 #------------------------------------------------------------------------------
 AC_MSG_CHECKING(--enable-testnet option)
 AC_ARG_ENABLE([testnet],
@@ -80,10 +82,10 @@ AC_ARG_ENABLE([testnet],
         [Compile for testnet.]),
     [enable_testnet=$enableval],
     [enable_testnet=no])
-AC_MSG_RESULT($enable_testnet)
+AC_MSG_RESULT([$enable_testnet])
 AS_IF([test x$enable_testnet != xno], AC_DEFINE([ENABLE_TESTNET]))
 
-# Support --with-tests option
+# Support --with-tests option (default to yes).
 #------------------------------------------------------------------------------
 AC_MSG_CHECKING(--with-tests option)
 AC_ARG_WITH([tests],
@@ -91,51 +93,64 @@ AC_ARG_WITH([tests],
         [Compile with unit tests.]),
     [with_tests=$withval],
     [with_tests=yes])
-AC_MSG_RESULT($with_tests)
-
-# Require boost min version.
-#------------------------------------------------------------------------------
-# Boost does not publish package configs but has m4 tests.
-# The BOOST_ROOT environment variable is *not* prioritize by the m4 tests.
-# As a result there may be dependency conflicts between installed versions
-# and a version specified in BOOST_ROOT.
-# These scripts may produce incorrect error message text.
-AX_BOOST_BASE([1.49],,
-    [AC_MSG_ERROR([Boost 1.49 or later is required but was not found.])])
-AX_BOOST_DATE_TIME
-AX_BOOST_FILESYSTEM
-AX_BOOST_REGEX
-AX_BOOST_SYSTEM
-
-# Require GMP.
-#------------------------------------------------------------------------------
-# GMP does not publish a package config.
-AC_CHECK_HEADER([gmp.h],
-    [],
-    [AC_MSG_ERROR([GMP header is required but was not found.])],-)
-AC_CHECK_LIB([gmp],[__gmpz_init],
-    [AC_SUBST([gmp_LIBS], [-lgmp])],
-    [AC_MSG_ERROR([GMP library is required but was not found.])])
+AC_MSG_RESULT([$with_tests])
 
 # Require secp256k1 package min version.
 #------------------------------------------------------------------------------
 PKG_CHECK_MODULES([secp256k1], [libsecp256k1 >= 0.0.1])
 
-# Require test dependencies if $with_tests is set.
+# Require Boost min version (GCC/Linux 1.49, CLang/OSX 1.54).
 #------------------------------------------------------------------------------
+# Boost does not publish package configs but has m4 tests.
+AS_CASE([${host_os}], 
+    [*linux*], [AX_BOOST_BASE([1.49], [], 
+        [AC_MSG_ERROR([Boost 1.49 or later is required but was not found.])])],
+    [*darwin*], [AX_BOOST_BASE([1.54], [], 
+        [AC_MSG_ERROR([Boost 1.54 or later is required but was not found.])])],
+    [AC_MSG_ERROR([Unsupported build platform: ${host_os}])])
+    
+# These m4 scripts may identify the incorrect library in error message text.
+AX_BOOST_DATE_TIME
+AX_BOOST_FILESYSTEM
+AX_BOOST_REGEX
+AX_BOOST_SYSTEM
 AS_IF([test x$with_tests != xno], [AX_BOOST_UNIT_TEST_FRAMEWORK])
+
+# Require librt if on Linux (any version with clock_gettime).
+#------------------------------------------------------------------------------
+AS_CASE([${host_os}], 
+    [*linux*], AC_CHECK_LIB([rt], [clock_gettime],
+        [AC_SUBST([rt_LIBS], [-lrt]) clock_gettime_defined=yes],
+        [AC_MSG_ERROR([rt library is required but was not found.])]))
+       
+# Require GMP (any version with __gmpz_init).
+#------------------------------------------------------------------------------
+# If on OSX configure the MacPorts repository, do last since it's over-broad.
+AS_CASE([${host_os}],
+    [*darwin*],
+        [LDFLAGS="$LDFLAGS -L/opt/local/lib" 
+        CPPFLAGS="$CPPFLAGS -I/opt/local/include"])
+        
+# GMP does not publish a package config.
+AC_CHECK_HEADER([gmp.h], [],
+    [AC_MSG_ERROR([GMP header is required but was not found.])],-)
+AC_CHECK_LIB([gmp],[__gmpz_init],
+    [AC_SUBST([gmp_LIBS], [-lgmp])],
+    [AC_MSG_ERROR([GMP library is required but was not found.])])
+
+# Set WITH_TESTS if $with_tests != no.
+#------------------------------------------------------------------------------
 AM_CONDITIONAL([WITH_TESTS], [test x$with_tests != xno])
 AM_COND_IF([WITH_TESTS], [AC_MSG_NOTICE([WITH_TESTS defined])])
+
+# Set SET_BOOST_TEST_DYN_LINK if $enable_shared != no.
+#------------------------------------------------------------------------------
 AM_CONDITIONAL([SET_BOOST_TEST_DYN_LINK], [test x$enable_shared != xno])
 AM_COND_IF([SET_BOOST_TEST_DYN_LINK],
     [AC_MSG_NOTICE([BOOST_TEST_DYN_LINK defined])])
-
-# Require librt if on linux.
+    
+# Set USE_LIBRT if $clock_gettime_defined == yes.
 #------------------------------------------------------------------------------
-AS_CASE([${host_os}], [*linux*],
-    AC_CHECK_LIB([rt], [clock_gettime],
-        [AC_SUBST([rt_LIBS], [-lrt]) clock_gettime_defined=yes],
-        [AC_MSG_ERROR([rt library is required but was not found.])]))
 AM_CONDITIONAL([USE_LIBRT], [test x$clock_gettime_defined = xyes])
 AM_COND_IF([USE_LIBRT], [AC_MSG_NOTICE([USE_LIBRT defined])])
 
@@ -146,23 +161,29 @@ AX_CHECK_COMPILE_FLAG([-Wall],
 
 AX_CHECK_COMPILE_FLAG([-Wextra],
     [CXXFLAGS="$CXXFLAGS -Wextra"])
-
+    
+AX_CHECK_COMPILE_FLAG([-Wpedantic],
+    [CXXFLAGS="$CXXFLAGS -Wpedantic"],
+    AX_CHECK_COMPILE_FLAG([-pedantic],
+        [CXXFLAGS="$CXXFLAGS -pedantic"]))
+   
+# Suppress warnings.
+#------------------------------------------------------------------------------
 AX_CHECK_COMPILE_FLAG([-Wno-missing-braces],
     [CXXFLAGS="$CXXFLAGS -Wno-missing-braces"])
 
-# This cleans up for boost headers.
+# This cleans up for boost 1.49 (gcc).
 AX_CHECK_COMPILE_FLAG([-Wno-unused-local-typedefs],
     [CXXFLAGS="$CXXFLAGS -Wno-unused-local-typedefs"])
+    
+# This cleans up for boost 1.54 (clang).
+AX_CHECK_COMPILE_FLAG([-Wno-deprecated-register],
+    [CXXFLAGS="$CXXFLAGS -Wno-deprecated-register"])
 
 # Prevent clang from warning about unknown warnings (even though checked),
 # specifically -Wno-unused-local-typedefs.
 AX_CHECK_COMPILE_FLAG([-Wno-unknown-warning-option],
     [CXXFLAGS="$CXXFLAGS -Wno-unknown-warning-option"])
-
-AX_CHECK_COMPILE_FLAG([-Wpedantic],
-    [CXXFLAGS="$CXXFLAGS -Wpedantic"],
-    AX_CHECK_COMPILE_FLAG([-pedantic],
-        [CXXFLAGS="$CXXFLAGS -pedantic"]))
 
 # Set compiler flags.
 #------------------------------------------------------------------------------
